language/move-lang/tests/move_check/expansion/pack_no_fields_single_block_other_expr.exp
error: 

   ┌── tests/move_check/expansion/pack_no_fields_single_block_other_expr.move:6:19 ───
   │
 6 │         let s = S 0;
   │                   - Expected ';'
   │                   ^ Unexpected '0'
   │

